--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="file:///C:/Users/janmub/HTML/resume.html"><img src="https://janmub.github.io/gh-pages/JASIE.png"></a>
+            <a href="file:///C:/Users/janmub/HTML/resume.html"><img src="https://jingan0418.github.io/janmub.github.io/JASIE.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -60,19 +60,19 @@
             <p>Photoinjectors are low-emittance electron sources being used in many modem accelerator facilities. A 2998 MHz photoinjector has built for light source development at NSRRC. lt is of interest to generation short electron pulses from this injector for coherent emission of THz radiation. By controlling the phase of accelerating field in the linac, a physical mechanism called velocity bunching that occurs in the rf linac can be used to produce sub-picosecond electron beam. Computer codes such as PARMELA and GPT (Generic Particle Tracer) can be used to simulate space charge dynamics in photoinjectors. However, some physical phenomena that occur near photo-cathodes such as image charge, Schottky effects etc. are ignored in thèse codes. In order to establish a more useful simulation model for the NSRRC photoinjector system, we use SUPERFISH/POISSON to setup 2D models of electromagnetic wave structures (i.e. rf gun cavity and linac structure), gun and linac solenoid magnets for the space charge tracking code -- ASTRA. By optimization of system parameters, we seek for operating condition for production of electronic pulses at shortest bunch length. In addition, we study the sensitivity of the system to parameter changes and time-jitter.</p>
             <div class="row">
                 <div class="blog-col">
-                    <img src="https://janmub.github.io/gh-pages/JASIE2.png">
+                    <img src="https://jingan0418.github.io/janmub.github.io/JASIE2.png">
                     <div class="layer">
                         <h3>NTHU 2020 Thesis</h3>
                     </div>
                 </div>
                 <div class="blog-col">
-                    <img src="https://janmub.github.io/gh-pages/JASIE12.png">
+                    <img src="https://jingan0418.github.io/janmub.github.io/JASIE12.png">
                     <div class="layer">
                         <h3>TPS 2020 Annual Meeting</h3>
                     </div>
                 </div>
                 <div class="blog-col">
-                    <img src="https://janmub.github.io/gh-pages/JASIE3.jpg">
+                    <img src="https://jingan0418.github.io/janmub.github.io/JASIE3.jpg">
                     <div class="layer">
                         <h3>TPS 2020 Annual Meeting</h3>
                     </div>
@@ -86,19 +86,19 @@
         
             <div class="row">
                 <div class="blog-col">
-                    <img src="https://janmub.github.io/gh-pages/JASIE8.png">
+                    <img src="https://jingan0418.github.io/janmub.github.io/JASIE8.png">
                     <div class="layer">
                         <h3>2017 Department of Physics physics topic contest (No. 1)</h3>
                     </div>
                 </div>
                 <div class="blog-col">
-                    <img src="https://janmub.github.io/gh-pages/JASIE4.png">
+                    <img src="https://jingan0418.github.io/janmub.github.io/JASIE4.png">
                     <div class="layer">
                         <h3>TAMT 2017 Annual Meeting</h3>
                     </div>
                 </div>
                 <div class="blog-col">
-                    <img src="https://janmub.github.io/gh-pages/JASIE9.jpg">
+                    <img src="https://jingan0418.github.io/janmub.github.io/JASIE9.jpg">
                     <div class="layer">
                         <h3>TAMT 2017 Annual Meeting</h3>
                     </div>
@@ -134,17 +134,17 @@
 
         <div class="row">
             <div class="contact-col">
-                <img src="https://janmub.github.io/gh-pages/JASIE6.jpg">
+                <img src="https://jingan0418.github.io/janmub.github.io/JASIE6.jpg">
                 <h3>Christmas Party</h3>
                 <p>Participate in the 2016 Christmas Party of the Student Association of the Physics Department</p>
             </div>
             <div class="contact-col">
-                <img src="https://janmub.github.io/gh-pages/JASIE5.jpg">
+                <img src="https://jingan0418.github.io/janmub.github.io/JASIE5.jpg">
                 <h3>Student Association of the Physics Department</h3>
                 <p>Participate in the 2015 orientation camp of the Student Association of the Physics Department (equipment group members, fire stick members, dance members)</p>
             </div>
             <div class="contact-col">
-                <img src="https://janmub.github.io/gh-pages/JASIE7.JPG">
+                <img src="https://jingan0418.github.io/janmub.github.io/JASIE7.JPG">
                 <h3>Friendship Association Membership</h3>
                 <p>Participate in the 2015 Kaohsiung and Pingtung Friendship Association Membership (Activities Department members)</p>
             </div>
@@ -156,7 +156,7 @@
         <h1>Reference</h1>
         <div class="row">
             <div class="testimonials-col">
-                <a href="https://www.nsrrc.org.tw/chinese/personal.aspx?ID=00050&Dept_UID=53&Type=D"><img src="https://janmub.github.io/gh-pages/JASIE.png" alt=""></a>
+                <a href="https://www.nsrrc.org.tw/chinese/personal.aspx?ID=00050&Dept_UID=53&Type=D"><img src="https://jingan0418.github.io/janmub.github.io/JASIE.png" alt=""></a>
                 <div>
                     <h3>劉偉強/指導教授</h3>
                     <h4>國家同步輻射研究中心/高亮度注射器小組</h4>
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="testimonials-col">
-                <a href="https://www.nsrrc.org.tw/chinese/personal.aspx?ID=15108&Dept_UID=53&Type=D"><img src="https://janmub.github.io/gh-pages/JASIE13.png" alt=""></a>
+                <a href="https://www.nsrrc.org.tw/chinese/personal.aspx?ID=15108&Dept_UID=53&Type=D"><img src="https://jingan0418.github.io/janmub.github.io/JASIE13.png" alt=""></a>
                 <div>
                     <h3>李安平/主管</h3>
                     <h4>國家同步輻射研究中心/高亮度注射器小組</h4>
