--- a/resume/resume.html
+++ b/resume/resume.html
@@ -205,5 +205,6 @@
             navLinks.style.right="-200px";
         } 
     </script>
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4273472,document.body||document.documentElement)</script>
 </body>
 </html>
