--- a/resume/resume.html
+++ b/resume/resume.html
@@ -204,7 +204,8 @@
         function hideMenu(){
             navLinks.style.right="-200px";
         } 
+        
+        function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4273472,document.body||document.documentElement
     </script>
-    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4273472,document.body||document.documentElement)</script>
 </body>
 </html>
